# sqformat

./: .sqformat.toml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  STYLE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: release.yml  rust.yml
sqfmt/: Cargo.toml
sqfmt-lib/: Cargo.toml
sqfmt-lib/src/: comment.rs  config.rs  expression.rs  lib.rs  operator.rs  shared.rs  statement.rs  test_utils.rs  token.rs  type_format.rs  writer.rs
sqfmt-lib/src/combinators/: base.rs  tuple_format.rs  writer.rs
sqfmt/src/: main.rs
sqfmt/test_files/: _gamemode_inf.nut  indents_e.gnut  spacing.gnut  spacing_e.gnut
